--- a/MyAddressBook+/Web.config
+++ b/MyAddressBook+/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="SqlDataConnection" connectionString="Server=tcp:stktestsql.database.windows.net,1433;Initial Catalog=MyAddressBook;Persist Security Info=False;User ID=sithu;Password=40HAbc292662;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+    <add name="SqlDataConnection" connectionString="Server=tcp:stktestsql.database.windows.net,1433;Initial Catalog=MyAddressBook;Persist Security Info=False;User ID={user_name};Password={password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
 
   </connectionStrings>
   <appSettings>
